k8s/ch2-inference-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ch2-inference-server
spec:
  type: ClusterIP
  selector:
    app: ch2-inference-server
  ports:
  - port: 9527
    targetPort: 9527
