k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  labels:
    name: gateway
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-stripprefix@kubernetescrd
spec:
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/ml-zoomcamp"
          backend:
            service:
              name: gateway
              port: 
                number: 8000

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: stripprefix
spec:
  stripPrefix:
    prefixes:
      - /ml-zoomcamp
    forceSlash: false
